@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ui;
 
 import com.intellij.diagnostic.Activity;
@@ -7,88 +7,54 @@ import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.SystemInfoRt;
-import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.platform.ProjectSelfieUtil;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.ui.scale.ScaleContext;
 import com.intellij.util.ImageLoader;
 import com.intellij.util.JBHiDPIScaledImage;
-import com.intellij.util.concurrency.NonUrgentExecutor;
 import com.intellij.util.ui.ImageUtil;
-import com.intellij.util.ui.JBImageIcon;
 import com.intellij.util.ui.JBInsets;
 import com.intellij.util.ui.StartupUiUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.imageio.ImageIO;
-import javax.swing.*;
 import java.awt.*;
+import java.awt.geom.RoundRectangle2D;
 import java.awt.image.BufferedImage;
-import java.io.IOException;
+import java.math.BigInteger;
 import java.net.URL;
 import java.nio.ByteBuffer;
+import java.nio.ByteOrder;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.security.MessageDigest;
 import java.security.Security;
-import java.util.Base64;
-import java.util.Objects;
+import java.util.concurrent.ForkJoinPool;
 
 /**
  * To customize your IDE splash go to YourIdeNameApplicationInfo.xml and edit 'logo' tag. For more information see documentation for
  * the tag attributes in ApplicationInfo.xsd file.
  */
 public final class Splash extends Dialog {
-  private static final float JBUI_INIT_SCALE = JBUIScale.scale(1f);
-
-  private final int myWidth;
-  private final int myHeight;
-  private final int progressHeight;
-  private final int progressY;
-  private double progress;
-  private final Color progressColor;
-  private int progressLastPosition = 0;
-  private final Icon progressTail;
   private final @Nullable ProgressSlidePainter progressSlidePainter;
   private final Image image;
 
   public Splash(@NotNull ApplicationInfoEx info) {
     super((Frame)null, "splash" /* not visible, but available through window properties on Linux */);
     setUndecorated(true);
+    setBackground(Gray.TRANSPARENT);
     setResizable(false); // makes tiling window managers on Linux show window as floating
 
     progressSlidePainter = info.getProgressSlides().isEmpty() ? null : new ProgressSlidePainter(info);
-    progressHeight = uiScale(info.getProgressHeight());
-    progressY = uiScale(info.getProgressY());
-    progressTail = getProgressTailIcon(info);
 
     setFocusableWindowState(false);
 
     image = loadImage(info.getSplashImageUrl(), info);
-    myWidth = image.getWidth(null);
-    myHeight = image.getHeight(null);
-    long rgba = info.getProgressColor();
-    //noinspection UseJBColor
-    progressColor = rgba == -1 ? null : new Color((int)rgba, rgba > 0xffffff);
-
-    setSize(new Dimension(myWidth, myHeight));
+    int width = image.getWidth(null);
+    int height = image.getHeight(null);
+    setSize(new Dimension(width, height));
     setLocationInTheCenterOfScreen(this);
-  }
-
-  private static @Nullable Icon getProgressTailIcon(@NotNull ApplicationInfoEx info) {
-    String progressTailIconName = info.getProgressTailIcon();
-    if (progressTailIconName == null) {
-      return null;
-    }
-
-    try {
-      String path = Objects.requireNonNull(Splash.class.getResource(progressTailIconName)).toString();
-      Image image = doLoadImage(path);
-      return image == null ? null : new JBImageIcon(image);
-    }
-    catch (Exception ignore) {
-      return null;
-    }
   }
 
   public void initAndShow(boolean visible) {
@@ -106,48 +72,64 @@ public final class Splash extends Dialog {
   }
 
   private static @NotNull Image loadImage(@NotNull String path, @NotNull ApplicationInfoEx appInfo) {
-    float scale = JBUIScale.sysScale();
-    if (isCacheNeeded(scale)) {
-      var image = loadImageFromCache(path, scale, appInfo);
+    float sysScale = JBUIScale.sysScale();
+    var file = getCacheFile(path, sysScale, appInfo);
+    if (file != null) {
+      var image = loadImageFromCache(file);
       if (image != null) {
         return image;
       }
-
-      cacheAsync(path, appInfo);
     }
 
-    Image result = doLoadImage(path);
+    Image result = doLoadImage(path, sysScale);
     if (result == null) {
       throw new IllegalStateException("Cannot find image: " + path);
+    }
+
+    if (file != null) {
+      ForkJoinPool.commonPool().execute(() -> {
+        try {
+          BufferedImage rawImage =
+            (BufferedImage)(result instanceof JBHiDPIScaledImage ? ((JBHiDPIScaledImage)result).getDelegate() : result);
+          assert rawImage != null;
+          ProjectSelfieUtil.INSTANCE.writeImage(file, rawImage, sysScale);
+        }
+        catch (Throwable e) {
+          Logger.getInstance(Splash.class).warn("Cannot save splash image", e);
+        }
+      });
     }
     return result;
   }
 
-  private static void cacheAsync(@NotNull String url, @NotNull ApplicationInfoEx appInfo) {
-    // Don't use already loaded image to avoid oom
-    NonUrgentExecutor.getInstance().execute(() -> {
-      var cacheFile = getCacheFile(url, JBUIScale.sysScale(), appInfo);
-      if (cacheFile == null) {
-        return;
-      }
-      var image = doLoadImage(url);
-      if (image != null) {
-        saveImage(cacheFile, FileUtilRt.getExtension(url), image);
-      }
-    });
-  }
+  static @Nullable Image doLoadImage(@NotNull String path, float sysScale) {
+    BufferedImage originalImage = ImageLoader.INSTANCE.loadImageForStartUp(path, Splash.class.getClassLoader());
+    if (originalImage == null) {
+      return null;
+    }
 
-  private static boolean isCacheNeeded(float scale) {
-    return scale != 1 && scale != 2;
-  }
+    int w = originalImage.getWidth();
+    int h = originalImage.getHeight();
 
-  static @Nullable Image doLoadImage(@NotNull String path) {
-    return ImageLoader.loadImageForStartUp(path, Splash.class.getClassLoader(), ImageLoader.ALLOW_FLOAT_SCALING, ScaleContext.create(), !path.endsWith(".svg"));
+    @SuppressWarnings("UndesirableClassUsage")
+    BufferedImage resultImage = new BufferedImage(w, h, BufferedImage.TYPE_INT_ARGB);
+    Graphics2D g2 = resultImage.createGraphics();
+
+    g2.setComposite(AlphaComposite.Src);
+    ImageUtil.applyQualityRenderingHints(g2);
+    //noinspection UseJBColor
+    g2.setColor(Color.WHITE);
+    float cornerRadius = 8 * sysScale;
+    g2.fill(new RoundRectangle2D.Float(0, 0, w, h, cornerRadius, cornerRadius));
+    g2.setComposite(AlphaComposite.SrcIn);
+    g2.drawImage(originalImage, 0, 0, null);
+    g2.dispose();
+    return ImageUtil.ensureHiDPI(resultImage, ScaleContext.create());
   }
 
   @Override
   public void paint(Graphics g) {
-    if (progress < 0.10 || progressSlidePainter == null) {
+    if (progressSlidePainter == null) {
       StartupUiUtil.drawImage(g, image, 0, 0, null);
     }
     else {
@@ -164,122 +146,61 @@ public final class Splash extends Dialog {
     window.setLocation(StartupUiUtil.getCenterPoint(bounds, window.getSize()));
   }
 
-  public void showProgress(double progress) {
-    if (progressColor == null) {
-      return;
-    }
-
-    if ((progress - this.progress) > 0.01 || progress > 0.99) {
-      this.progress = progress;
-      Graphics graphics = getGraphics();
-      // not yet initialized
-      if (graphics != null) {
-        paintProgress(graphics);
-      }
-    }
-  }
-
   private void paintProgress(@Nullable Graphics g) {
     if (g == null) {
       return;
     }
 
     if (progressSlidePainter != null) {
-      progressSlidePainter.paintSlides(g, progress);
+      progressSlidePainter.paintSlides(g, 0.0);
     }
-
-    Color progressColor = this.progressColor;
-    if (progressColor == null) {
-      return;
-    }
-
-    int progressWidth = (int)(myWidth * progress);
-    int currentWidth = progressWidth - progressLastPosition;
-    if (currentWidth == 0) {
-      return;
-    }
-
-    g.setColor(progressColor);
-    int y = progressSlidePainter == null ? progressY : myHeight - progressHeight;
-    g.fillRect(progressLastPosition, y, currentWidth, progressHeight);
-    if (progressTail != null) {
-      int tx = (int)(currentWidth - (progressTail.getIconWidth() / JBUI_INIT_SCALE / 2f * JBUI_INIT_SCALE));
-      int ty = (int)(progressY - (progressTail.getIconHeight() - progressHeight) / JBUI_INIT_SCALE / 2f * JBUI_INIT_SCALE);
-      progressTail.paintIcon(this, g, tx, ty);
-    }
-    progressLastPosition = progressWidth;
   }
 
-  private static int uiScale(int i) {
-    return (int)(i * JBUI_INIT_SCALE);
+  private static @Nullable Image loadImageFromCache(@NotNull Path file) {
+    try {
+      return ProjectSelfieUtil.INSTANCE.readImage(file, ScaleContext::create);
+    }
+    catch (Exception e) {
+      // don't use `error`, because it can crash application
+      Logger.getInstance(Splash.class).warn("Failed to load splash image", e);
+    }
+    return null;
   }
 
-   private static void saveImage(@NotNull Path file, String extension, @NotNull Image image) {
-     try {
-       var tmp = file.resolve(file + ".tmp" + System.currentTimeMillis());
-       Files.createDirectories(tmp.getParent());
-       try {
-         ImageIO.write(ImageUtil.toBufferedImage(image), extension, tmp.toFile());
-         try {
-           Files.move(tmp, file, StandardCopyOption.ATOMIC_MOVE);
-         }
-         catch (AtomicMoveNotSupportedException e) {
-           Files.move(tmp, file);
-         }
-       }
-       finally {
-         Files.deleteIfExists(tmp);
-       }
-     }
-     catch (Throwable ignored) {
-     }
-   }
+  private static @Nullable Path getCacheFile(@NotNull String path, float scale, @NotNull ApplicationInfoEx appInfo) {
+    try {
+      var d = MessageDigest.getInstance("SHA-256", Security.getProvider("SUN"));
+      d.update(path.getBytes(StandardCharsets.UTF_8));
+      ByteBuffer buffer = ByteBuffer.allocate(Long.SIZE + 1).order(ByteOrder.LITTLE_ENDIAN);
+      // path for EAP and release builds is the same, but content maybe different
+      buffer.put((byte)(appInfo.isEAP() ? 1 : 0));
 
-   private static @Nullable Image loadImageFromCache(@NotNull String path, float scale, @NotNull ApplicationInfoEx appInfo) {
-     var file = getCacheFile(path, scale, appInfo);
-     if (file == null) {
-       return null;
-     }
+      // for dev run build data is equal to run time
+      if (appInfo.getBuild().isSnapshot()) {
+        long size = 0;
+        try {
+          String pathToSplash = path.startsWith("/") ? path.substring(1) : path;
+          URL resource = Splash.class.getClassLoader().getResource(pathToSplash);
+          if (resource != null) {
+            size = Files.size(Path.of(resource.toURI()));
+          }
+        }
+        catch (Exception e) {
+          Logger.getInstance(Splash.class).warn("Failed to read splash image", e);
+        }
+        buffer.putLong(size);
+      }
+      else {
+        buffer.putLong(appInfo.getBuildDate().getTimeInMillis());
+      }
+      buffer.flip();
+      d.update(buffer);
 
-     try {
-       if (!Files.isRegularFile(file)) {
-         return null;
-       }
-       Image image = ImageIO.read(file.toFile());
-       if (StartupUiUtil.isJreHiDPI()) {
-         int w = image.getWidth(ImageLoader.ourComponent);
-         int h = image.getHeight(ImageLoader.ourComponent);
-         image = new JBHiDPIScaledImage(image, w / (double)scale, h / (double)scale, BufferedImage.TYPE_INT_ARGB);
-       }
-       return image;
-     }
-     catch (IOException e) {
-       // don't use `error`, because it can crash application
-       Logger.getInstance(Splash.class).warn("Failed to load splash image", e);
-     }
-     return null;
-   }
-
-   private static @Nullable Path getCacheFile(@NotNull String path, float scale, @NotNull ApplicationInfoEx appInfo) {
-     try {
-       var d = MessageDigest.getInstance("SHA-256", Security.getProvider("SUN"));
-       d.update(path.getBytes(StandardCharsets.UTF_8));
-       // path for EAP and release builds is the same, but content maybe different
-       d.update((byte)(appInfo.isEAP() ? 1 : 0));
-
-       String pathToSplash = path.startsWith("/") ? path.substring(1) : path;
-       URL resource = Splash.class.getClassLoader().getResource(pathToSplash);
-       if (resource != null) {
-         long fileSize = Files.size(Paths.get(resource.toURI()));
-         ByteBuffer buffer = ByteBuffer.allocate(Long.SIZE).putLong(fileSize);
-         d.update(buffer);
-       }
-       var encodedDigest = Base64.getUrlEncoder().encodeToString(d.digest());
-       int dotIndex = path.lastIndexOf('.');
-       return Paths.get(PathManager.getSystemPath(), "splashSlides", encodedDigest + '.' + scale + '.' + (dotIndex < 0 ? "" : path.substring(dotIndex)));
-     }
-     catch (Exception e) {
-       return null;
-     }
-   }
+      var encodedDigest = new BigInteger(1, d.digest()).toString(Character.MAX_RADIX);
+      return Path.of(PathManager.getSystemPath(), "splash", encodedDigest + '.' + scale + ".ij");
+    }
+    catch (Exception e) {
+      return null;
+    }
+  }
 }
