@@ -8,12 +8,13 @@ import com.intellij.execution.executors.DefaultRunExecutor;
 import com.intellij.icons.AllIcons;
 import com.intellij.ide.plugins.DynamicPluginListener;
 import com.intellij.ide.plugins.IdeaPluginDescriptor;
+import com.intellij.ide.projectView.PresentationData;
 import com.intellij.ide.util.treeView.NodeDescriptor;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.JBPopupFactory;
-import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.NlsContexts;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VfsUtilCore;
@@ -23,7 +24,13 @@ import com.intellij.pom.NavigatableAdapter;
 import com.intellij.psi.xml.XmlElement;
 import com.intellij.ui.JBColor;
 import com.intellij.ui.SimpleTextAttributes;
-import com.intellij.ui.treeStructure.*;
+import com.intellij.ui.tree.AsyncTreeModel;
+import com.intellij.ui.tree.StructureTreeModel;
+import com.intellij.ui.tree.TreeVisitor;
+import com.intellij.ui.treeStructure.CachingSimpleNode;
+import com.intellij.ui.treeStructure.SimpleNode;
+import com.intellij.ui.treeStructure.SimpleTree;
+import com.intellij.ui.treeStructure.SimpleTreeStructure;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.ContainerUtil;
@@ -49,10 +56,12 @@ import org.jetbrains.idea.maven.project.MavenProjectsManager;
 import org.jetbrains.idea.maven.statistics.MavenActionsUsagesCollector;
 import org.jetbrains.idea.maven.tasks.MavenShortcutsManager;
 import org.jetbrains.idea.maven.tasks.MavenTasksManager;
-import org.jetbrains.idea.maven.utils.*;
+import org.jetbrains.idea.maven.utils.MavenArtifactUtil;
+import org.jetbrains.idea.maven.utils.MavenPluginInfo;
+import org.jetbrains.idea.maven.utils.MavenUIUtil;
+import org.jetbrains.idea.maven.utils.MavenUtil;
 
 import javax.swing.*;
-import javax.swing.tree.DefaultTreeModel;
 import javax.swing.tree.TreePath;
 import java.awt.*;
 import java.awt.event.InputEvent;
@@ -60,6 +69,7 @@ import java.io.File;
 import java.net.URL;
 import java.util.List;
 import java.util.*;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutorService;
 
 import static com.intellij.openapi.ui.UiUtils.getPresentablePath;
@@ -81,8 +91,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   private final MavenShortcutsManager myShortcutsManager;
   private final MavenProjectsNavigator myProjectsNavigator;
 
-  private final SimpleTreeBuilder myTreeBuilder;
   private final RootNode myRoot = new RootNode();
+  private final StructureTreeModel<MavenProjectsStructure> myModel;
+  private final SimpleTree myTree;
   private volatile boolean isUnloading = false;
 
   private final Map<MavenProject, ProjectNode> myProjectToNodeMapping = new HashMap<>();
@@ -108,15 +119,10 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
       }
     });
 
-    configureTree(tree);
-
-    myTreeBuilder = new SimpleTreeBuilder(tree, (DefaultTreeModel)tree.getModel(), this, null) {
-      // unique class to simplify search through the logs
-    };
-    Disposer.register(projectsNavigator, myTreeBuilder);
-
-    myTreeBuilder.initRoot();
-    myTreeBuilder.expand(myRoot, null);
+    myTree = tree;
+    configureTree(myTree);
+    myModel = new StructureTreeModel<>(this, projectsNavigator);
+    tree.setModel(new AsyncTreeModel(myModel, projectsNavigator));
   }
 
   private void configureTree(final SimpleTree tree) {
@@ -140,16 +146,11 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
       @Override
       public MavenUIUtil.CheckBoxState getState(Object userObject) {
         MavenProfileKind state = ((ProfileNode)userObject).getState();
-        switch (state) {
-          case NONE:
-            return MavenUIUtil.CheckBoxState.UNCHECKED;
-          case EXPLICIT:
-            return MavenUIUtil.CheckBoxState.CHECKED;
-          case IMPLICIT:
-            return MavenUIUtil.CheckBoxState.PARTIAL;
-        }
-        MavenLog.LOG.error("unknown profile state: " + state);
-        return MavenUIUtil.CheckBoxState.UNCHECKED;
+        return switch (state) {
+          case NONE -> MavenUIUtil.CheckBoxState.UNCHECKED;
+          case EXPLICIT -> MavenUIUtil.CheckBoxState.CHECKED;
+          case IMPLICIT -> MavenUIUtil.CheckBoxState.PARTIAL;
+        };
       }
     });
   }
@@ -169,7 +170,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
   private void updateFrom(SimpleNode node) {
     if (node != null) {
-      myTreeBuilder.addSubtreeToUpdateByElement(node);
+      myModel.invalidate(node, true);
     }
   }
 
@@ -254,8 +255,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
   }
 
-  public void accept(SimpleNodeVisitor visitor) {
-    ((SimpleTree)myTreeBuilder.getTree()).accept(myTreeBuilder, visitor);
+  public void accept(@NotNull TreeVisitor visitor) {
+    ((AsyncTreeModel)myTree.getModel()).accept(visitor);
   }
 
   public void updateGoals() {
@@ -276,7 +277,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public void select(SimpleNode node) {
-    myTreeBuilder.select(node, null);
+    myModel.select(node, myTree, treePath -> {});
   }
 
   private ProjectNode findNodeFor(MavenProject project) {
@@ -419,7 +420,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    public void cleanUpCache() {
+    public synchronized void cleanUpCache() {
       super.cleanUpCache();
       myTotalErrorLevel = null;
     }
@@ -433,7 +434,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
       updateUpTo(this);
     }
 
-    public ErrorLevel getTotalErrorLevel() {
+    public synchronized ErrorLevel getTotalErrorLevel() {
       if (myTotalErrorLevel == null) {
         myTotalErrorLevel = calcTotalErrorLevel();
       }
@@ -461,24 +462,24 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(), null);
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation, getName(), null);
     }
 
-    protected void setNameAndTooltip(String name, @Nullable @NlsContexts.Tooltip String tooltip) {
-      setNameAndTooltip(name, tooltip, (String)null);
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable @NlsContexts.Tooltip String tooltip) {
+      setNameAndTooltip(presentation, name, tooltip, (String)null);
     }
 
-    protected void setNameAndTooltip(String name, @Nullable @NlsContexts.Tooltip String tooltip, @Nullable String hint) {
-      setNameAndTooltip(name, tooltip, getPlainAttributes());
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable @NlsContexts.Tooltip String tooltip, @Nullable @NlsSafe String hint) {
+      setNameAndTooltip(presentation, name, tooltip, getPlainAttributes());
       if (showDescriptions() && !StringUtil.isEmptyOrSpaces(hint)) {
-        addColoredFragment(" (" + hint + ")", SimpleTextAttributes.GRAY_ATTRIBUTES);
+        presentation.addText(" (" + hint + ")", SimpleTextAttributes.GRAY_ATTRIBUTES);
       }
     }
 
-    protected void setNameAndTooltip(String name, @Nullable @NlsContexts.Tooltip String tooltip, SimpleTextAttributes attributes) {
-      clearColoredText();
-      addColoredFragment(name, prepareAttributes(attributes));
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, @NlsSafe String name, @Nullable @NlsContexts.Tooltip String tooltip, SimpleTextAttributes attributes) {
+      presentation.clearText();
+      presentation.addText(name, prepareAttributes(attributes));
       getTemplatePresentation().setTooltip(tooltip);
     }
 
@@ -547,7 +548,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public abstract class ProjectsGroupNode extends GroupNode {
-    private final List<ProjectNode> myProjectNodes = new ArrayList<>();
+    private final List<ProjectNode> myProjectNodes = new CopyOnWriteArrayList<>();
 
     public ProjectsGroupNode(MavenSimpleNode parent) {
       super(parent);
@@ -599,7 +600,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
     @Override
     protected List<? extends MavenSimpleNode> doGetChildren() {
-      return ContainerUtil.concat(Collections.singletonList(myProfilesNode), super.doGetChildren());
+      var children = new CopyOnWriteArrayList<MavenSimpleNode>(List.of(myProfilesNode));
+      children.addAll(super.doGetChildren());
+      return children;
     }
 
     public void updateProfiles() {
@@ -608,11 +611,11 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public class ProfilesNode extends GroupNode {
-    private List<ProfileNode> myProfileNodes = new ArrayList<>();
+    private final List<ProfileNode> myProfileNodes = new CopyOnWriteArrayList<>();
 
     public ProfilesNode(MavenSimpleNode parent) {
       super(parent);
-      setUniformIcon(MavenIcons.ProfilesClosed);
+      getTemplatePresentation().setIcon(MavenIcons.ProfilesClosed);
     }
 
     @Override
@@ -635,7 +638,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         newNodes.add(node);
       }
 
-      myProfileNodes = newNodes;
+      myProfileNodes.clear();
+      myProfileNodes.addAll(newNodes);
       sort(myProfileNodes);
       childrenChanged();
     }
@@ -808,10 +812,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
     @Override
     protected List<? extends MavenSimpleNode> doGetChildren() {
-      return ContainerUtil.concat(
-        Arrays.asList(myLifecycleNode, myPluginsNode, myRunConfigurationsNode, myDependenciesNode),
-        super.doGetChildren()
-      );
+      var children = new CopyOnWriteArrayList<MavenSimpleNode>(List.of(myLifecycleNode, myPluginsNode, myRunConfigurationsNode, myDependenciesNode));
+      children.addAll(super.doGetChildren());
+      return children;
     }
 
     private void updateProject() {
@@ -855,7 +858,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
+    protected void doUpdate(@NotNull PresentationData presentation) {
       String hint = null;
 
       if (!myProjectsNavigator.getGroupModules()
@@ -864,7 +867,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         hint = "root";
       }
 
-      setNameAndTooltip(getName(), myTooltipCache, hint);
+      setNameAndTooltip(presentation, getName(), myTooltipCache, hint);
     }
 
     @Override
@@ -957,10 +960,10 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void setNameAndTooltip(String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
-      super.setNameAndTooltip(name, tooltip, attributes);
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
+      super.setNameAndTooltip(presentation, name, tooltip, attributes);
       if (myProjectsNavigator.getShowVersions()) {
-        addColoredFragment(":" + myMavenProject.getMavenId().getVersion(),
+        presentation.addText(":" + myMavenProject.getMavenId().getVersion(),
                            new SimpleTextAttributes(SimpleTextAttributes.STYLE_PLAIN, JBColor.GRAY));
       }
     }
@@ -986,7 +989,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public abstract class GoalsGroupNode extends GroupNode {
-    protected final List<GoalNode> myGoalNodes = new ArrayList<>();
+    protected final List<GoalNode> myGoalNodes = new CopyOnWriteArrayList<>();
 
     public GoalsGroupNode(MavenSimpleNode parent) {
       super(parent);
@@ -1029,7 +1032,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
+    protected void doUpdate(@NotNull PresentationData presentation) {
       String s1 = StringUtil.nullize(myShortcutsManager.getDescription(myMavenProject, myGoal));
       String s2 = StringUtil.nullize(myTasksManager.getDescription(myMavenProject, myGoal));
 
@@ -1044,7 +1047,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         hint = s1 + ", " + s2;
       }
 
-      setNameAndTooltip(getName(), null, hint);
+      setNameAndTooltip(presentation, getName(), null, hint);
     }
 
     @Override
@@ -1116,7 +1119,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public class PluginsNode extends GroupNode {
-    private final List<PluginNode> myPluginNodes = new ArrayList<>();
+    private final List<PluginNode> myPluginNodes = new CopyOnWriteArrayList<>();
 
     public PluginsNode(ProjectNode parent) {
       super(parent);
@@ -1162,8 +1165,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(), null, myPluginInfo != null ? myPlugin.getDisplayString() : null);
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation, getName(), null, myPluginInfo != null ? myPlugin.getDisplayString() : null);
     }
 
     public void updatePlugin(@Nullable MavenPluginInfo newPluginInfo) {
@@ -1236,7 +1239,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
   public abstract class BaseDependenciesNode extends GroupNode {
     protected final MavenProject myMavenProject;
-    private List<DependencyNode> myChildren = new ArrayList<>();
+    private final List<DependencyNode> myChildren = new CopyOnWriteArrayList<>();
 
     protected BaseDependenciesNode(MavenSimpleNode parent, MavenProject mavenProject) {
       super(parent);
@@ -1299,7 +1302,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         newNodes = new ArrayList<>(myChildren.subList(0, validChildCount));
       }
 
-      myChildren = newNodes;
+      myChildren.clear();
+      myChildren.addAll(newNodes);
       childrenChanged();
     }
 
@@ -1381,19 +1385,19 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(), null, getToolTip());
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation, getName(), null, getToolTip());
     }
 
     @Override
-    protected void setNameAndTooltip(String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
       final SimpleTextAttributes mergedAttributes;
       if (myArtifactNode.getState() == MavenArtifactState.CONFLICT || myArtifactNode.getState() == MavenArtifactState.DUPLICATE) {
         mergedAttributes = SimpleTextAttributes.merge(attributes, SimpleTextAttributes.GRAYED_ATTRIBUTES);
       } else {
         mergedAttributes = attributes;
       }
-      super.setNameAndTooltip(name, tooltip, mergedAttributes);
+      super.setNameAndTooltip(presentation, name, tooltip, mergedAttributes);
     }
 
     private void updateDependency() {
@@ -1424,7 +1428,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
   public class RunConfigurationsNode extends GroupNode {
 
-    private final List<RunConfigurationNode> myChildren = new ArrayList<>();
+    private final List<RunConfigurationNode> myChildren = new CopyOnWriteArrayList<>();
 
     public RunConfigurationsNode(ProjectNode parent) {
       super(parent);
@@ -1499,8 +1503,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(),
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation,
+                        getName(),
                         null,
                         StringUtil.join(((MavenRunConfiguration)mySettings.getConfiguration()).getRunnerParameters().getGoals(), " "));
     }
