@@ -1,6 +1,6 @@
 /*
  * Copyright 2006 ProductiveMe Inc.
- * Copyright 2013-2018 JetBrains s.r.o.
+ * Copyright 2013-2022 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,12 +18,17 @@
 package com.pme.exe;
 
 import com.pme.util.BitsUtil;
-import com.pme.util.OffsetTrackingInputStream;
+import com.pme.util.StreamUtil;
 
-import java.io.*;
+import java.io.DataInput;
+import java.io.DataOutput;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.lang.reflect.Array;
+import java.util.Iterator;
+import java.util.LinkedHashMap;
 
 /**
  * @author Sergey Zhulin
@@ -34,8 +39,8 @@ public abstract class Bin {
   private String myName;
   private String myDescription;
   private long myOffset = 0;
-  ArrayList<Bin.Value> myOffsetHolders = new ArrayList<Bin.Value>(0);
-  ArrayList<Bin.Value> mySizeHolders = new ArrayList<Bin.Value>(0);
+  final ArrayList<Bin.Value> myOffsetHolders = new ArrayList<>(0);
+  final ArrayList<Bin.Value> mySizeHolders = new ArrayList<>(0);
 
   public Bin(String name) {
     myName = name;
@@ -97,34 +102,15 @@ public abstract class Bin {
 
   public abstract void report(OutputStreamWriter writer) throws IOException;
 
-  public static class Comment extends Bin {
-    public Comment(String comment) {
-      super(comment);
-    }
-
-    public long sizeInBytes() {
-      return 0;
-    }
-
-    public void read(DataInput stream) throws IOException {
-    }
-
-    public void write(DataOutput stream) throws IOException {
-    }
-
-    public void report(OutputStreamWriter writer) throws IOException {
-      _report(writer, getName());
-    }
-  }
-
   public static class Structure extends Bin {
-    private ArrayList<Bin> myMembers = new ArrayList<Bin>(1);
-    private HashMap<String, Bin> myMembersMap = new HashMap<String, Bin>(1);
+    private final ArrayList<Bin> myMembers = new ArrayList<>(1);
+    private final HashMap<String, Bin> myMembersMap = new LinkedHashMap<>(1);
 
     public Structure(String name) {
       super(name);
     }
 
+    @Override
     public void resetOffsets(long newOffset) {
       super.resetOffsets(newOffset);
       long offset = getOffset();
@@ -135,17 +121,19 @@ public abstract class Bin {
       updateSizeOffsetHolders();
     }
 
+    @Override
     public void copyFrom(Bin binStructure) {
       Bin.Structure structure = (Bin.Structure)binStructure;
       ArrayList<Bin> members = structure.getMembers();
       for (Bin bin : members) {
-        Bin valueMember = getMember(bin.getName());
+        Bin valueMember = myMembersMap.get(bin.getName());
         if (valueMember != null) {
           valueMember.copyFrom(bin);
         }
       }
     }
 
+    @Override
     public long sizeInBytes() {
       long size = 0;
       for (Bin bin : myMembers) {
@@ -157,69 +145,39 @@ public abstract class Bin {
     public ArrayList<Bin> getMembers() {
       return myMembers;
     }
-    public void addMember(Bin bin, String description) {
+
+    public <T extends Bin> T addMember(T bin, String description) {
       bin.setDescription(description);
-      addMember(bin);
+      return addMember(bin);
     }
 
-    public void addComment(String message) {
-      myMembers.add(new Comment(message));
-    }
-
-    public Bin insertMember(int index, Bin bin) {
-      ArrayList<Bin> list = new ArrayList<Bin>( myMembers.size() + 1 );
-      for ( int i = 0; i < index; ++i ){
-        list.add( myMembers.get( i ) );
-      }
-      list.add( bin );
-      for ( int i = index; i < myMembers.size(); ++i ){
-        list.add( myMembers.get( i ) );
-      }
-      myMembers = list;
-      addMemberToMapOnly(bin);
-      return bin;
-    }
-
-    public Bin addMember(Bin bin) {
+    public <T extends Bin> T addMember(T bin) {
       myMembers.add(bin);
       addMemberToMapOnly(bin);
       return bin;
     }
 
     //such members are not read by framework
-    //it is read by parent in 'read' overrided method
+    //it is read by parent in overrode 'read' method
     public void addMemberToMapOnly(Bin bin) {
       myMembersMap.put(bin.getName(), bin);
     }
 
-    public Bin getMember(String name) {
-      return myMembersMap.get(name);
-    }
-
-    public Bin.Value getValueMember(String name) {
-      return (Bin.Value) myMembersMap.get(name);
-    }
-
-    public Bin.Structure getStructureMember(String name) {
-      return (Bin.Structure) myMembersMap.get(name);
-    }
-
-    public long getValue(String name) {
-      return ((Bin.Value) myMembersMap.get(name)).getValue();
-    }
-
+    @Override
     public void read(DataInput stream) throws IOException {
       for (Bin bin : myMembers) {
         bin.read(stream);
       }
     }
 
+    @Override
     public void write(DataOutput stream) throws IOException {
       for (Bin bin : myMembers) {
         bin.write(stream);
       }
     }
 
+    @Override
     public void report(OutputStreamWriter writer) throws IOException {
       _report(writer, "--- '" + getName() + "' Structure --- size = " + sizeInBytes());
       _report(writer, "{Offset = " + Long.toHexString(getOffset()) + "}");
@@ -240,6 +198,7 @@ public abstract class Bin {
     public abstract long getValue();
     public abstract Value setValue(long value);
 
+    @Override
     public void copyFrom(Bin value) {
       setValue(((Value)value).getValue());
     }
@@ -248,9 +207,39 @@ public abstract class Bin {
       return myValue;
     }
 
-    public Value setRawValue(long value) {
+    public void setRawValue(long value) {
       myValue = value;
-      return this;
+    }
+  }
+
+  public static abstract class ReadOnlyValue extends Value {
+    public ReadOnlyValue(String name) {
+      super(name);
+    }
+
+    @Override
+    public long sizeInBytes() {
+      throw new IllegalStateException();
+    }
+
+    @Override
+    public void read(DataInput stream) {
+      throw new IllegalStateException();
+    }
+
+    @Override
+    public void write(DataOutput stream) {
+      throw new IllegalStateException();
+    }
+
+    @Override
+    public void report(OutputStreamWriter writer) {
+      throw new IllegalStateException();
+    }
+
+    @Override
+    public Value setValue(long value) {
+      throw new IllegalStateException();
     }
   }
 
@@ -259,30 +248,40 @@ public abstract class Bin {
       super(name);
     }
 
+    @Override
     public long sizeInBytes() {
       return 1;
     }
 
+    @Override
     public long getValue() {
       return getRawValue();
     }
-    public Value setValue(long value) {
+
+    @Override
+    public Byte setValue(long value) {
       setRawValue(value);
       return this;
     }
 
+    @Override
     public void read(DataInput stream) throws IOException {
       setRawValue(stream.readByte());
     }
 
+    @Override
     public void write(DataOutput stream) throws IOException {
-      stream.writeByte((byte) getRawValue());
+      stream.writeByte((byte)getRawValue());
     }
 
+    @Override
     public void report(OutputStreamWriter writer) throws IOException {
-      _report(writer, getDescription(), (byte) getValue());
+      _report(writer, getDescription(), (byte)getValue());
     }
 
+    public String toString() {
+      return BitsUtil.byteToHexString((int)getValue());
+    }
   }
 
   public static class Word extends Value {
@@ -294,27 +293,33 @@ public abstract class Bin {
       super(name);
     }
 
+    @Override
     public long sizeInBytes() {
       return 2;
     }
 
+    @Override
     public long getValue() {
-      return BitsUtil.revertBytesOfShort((short) super.getRawValue());
+      return Short.toUnsignedLong(Short.reverseBytes((short) super.getRawValue()));
     }
 
-    public Value setValue(long value) {
-      setRawValue(BitsUtil.revertBytesOfShort((short) value));
+    @Override
+    public Word setValue(long value) {
+      setRawValue(Short.toUnsignedLong(Short.reverseBytes((short)value)));
       return this;
     }
 
+    @Override
     public void read(DataInput stream) throws IOException {
       setRawValue(stream.readShort());
     }
 
+    @Override
     public void write(DataOutput stream) throws IOException {
       stream.writeShort((short) getRawValue());
     }
 
+    @Override
     public void report(OutputStreamWriter writer) throws IOException {
       short sh = (short) getValue();
       _report(writer, getDescription(), sh);
@@ -325,31 +330,41 @@ public abstract class Bin {
   }
 
   public static class DWord extends Value {
+    public DWord() {
+      super("");
+    }
+
     public DWord(String name) {
       super(name);
     }
 
+    @Override
     public long sizeInBytes() {
       return 4;
     }
 
-    public Value setValue(long value) {
-      setRawValue(BitsUtil.revertBytesOfInt((int) value));
+    @Override
+    public DWord setValue(long value) {
+      setRawValue(Integer.toUnsignedLong(Integer.reverseBytes((int)value)));
       return this;
     }
 
+    @Override
     public long getValue() {
-      return BitsUtil.revertBytesOfInt((int) super.getRawValue());
+      return Integer.toUnsignedLong(Integer.reverseBytes((int) super.getRawValue()));
     }
 
+    @Override
     public void read(DataInput stream) throws IOException {
       setRawValue(stream.readInt());
     }
 
+    @Override
     public void write(DataOutput stream) throws IOException {
       stream.writeInt((int) getRawValue());
     }
 
+    @Override
     public void report(OutputStreamWriter writer) throws IOException {
       _report(writer, getDescription(), (int) getValue());
     }
@@ -365,12 +380,12 @@ public abstract class Bin {
 
     @Override
     public long getValue() {
-      return BitsUtil.revertBytesOfLong(getRawValue());
+      return Long.reverseBytes(getRawValue());
     }
 
     @Override
-    public Value setValue(long value) {
-      setRawValue(BitsUtil.revertBytesOfLong(value));
+    public LongLong setValue(long value) {
+      setRawValue(Long.reverseBytes(value));
       return this;
     }
 
@@ -396,10 +411,10 @@ public abstract class Bin {
   }
 
   public static class Padding extends Bin {
-    private int myBytes;
+    private final int myBytes;
 
-    public Padding(int bytes) {
-      super("Padding");
+    public Padding(String name, int bytes) {
+      super(name);
       myBytes = bytes;
     }
 
@@ -410,13 +425,12 @@ public abstract class Bin {
 
     @Override
     public void read(DataInput stream) throws IOException {
-      if (stream instanceof OffsetTrackingInputStream) {
-        long offset = ((OffsetTrackingInputStream) stream).getOffset();
-        int skip = bytesToSkip(offset);
-        if (skip > 0) {
-          stream.skipBytes(skip);
-        }
+      long offset = StreamUtil.getOffset(stream);
+      int skip = bytesToSkip(offset);
+      if (skip > 0) {
+        stream.skipBytes(skip);
       }
+      //resetOffsets(offset);
     }
 
     private int bytesToSkip(long offset) {
@@ -434,82 +448,152 @@ public abstract class Bin {
     }
 
     @Override
-    public void report(OutputStreamWriter writer) throws IOException {
+    public void report(OutputStreamWriter writer) {
+    }
+
+    @Override
+    public String toString() {
+      return "Padding{" + getName() + "," + myBytes + '}';
     }
   }
 
-  public static class Txt extends Bin {
-    private StringBuffer myBuffer = new StringBuffer();
-    private Bin.Value mySize;
+  /**
+   * Fixed size character (1 byte) string, UTF-8
+   */
+  public static class CharStringFS extends Bin {
+    private final StringBuffer myBuffer = new StringBuffer();
+    private final Bin.Value mySize;
     private byte[] myBytes;
 
-    public Txt(String name, byte[] bytes) {
-      super(name);
-      myBytes = bytes;
-      mySize = new DWord("").setValue(bytes.length);
-      setValue();
-    }
-
-    public Txt(String name, String string) {
-      super(name);
-      myBytes = new byte[string.length() * 2];
-      byte[] bytes = string.getBytes();
-      for (int i = 0; i < bytes.length; ++i) {
-        myBytes[i * 2] = bytes[i];
-        myBytes[i * 2 + 1] = 0;
-      }
-      mySize = new DWord("").setValue(myBytes.length);
-      setValue();
-    }
-
-    public Txt(String name, Bin.Value size) {
+    public CharStringFS(String name, Bin.Value size) {
       super(name);
       mySize = size;
     }
 
-    public Txt(String name, int size) {
+    public CharStringFS(String name, int size) {
       this(name, new DWord("size").setValue(size));
     }
 
-    public String getText() {
-      return myBuffer.toString();
-    }
-
+    @Override
     public long sizeInBytes() {
       return mySize.getValue();
     }
 
-    private void setValue(){
-      for (int i = 0; i < mySize.getValue(); ++i) {
-        int b = BitsUtil.unsignedByte(myBytes[i]);
+    @Override
+    public void read(DataInput stream) throws IOException {
+      long size = mySize.getValue();
+      myBuffer.setLength(0);
+      myBytes = new byte[(int)size];
+      for (int i = 0; i < size; ++i) {
+        myBytes[i] = stream.readByte();
+      }
+      for (int i = 0; i < size; ++i) {
+        int b = java.lang.Byte.toUnsignedInt(myBytes[i]);
         if (b != 0) {
-          myBuffer.append((char) b);
+          myBuffer.append((char)b);
         }
       }
     }
 
-    public void read(DataInput stream) throws IOException {
-      myBuffer.setLength(0);
-      myBytes = new byte[(int) mySize.getValue()];
-      for (int i = 0; i < mySize.getValue(); ++i) {
-        myBytes[i] = stream.readByte();
-      }
-      setValue();
-    }
-
+    @Override
     public void write(DataOutput stream) throws IOException {
       stream.write(myBytes);
     }
 
+    @Override
     public void report(OutputStreamWriter writer) throws IOException {
       _report(writer, myBuffer.toString());
     }
+
+    public String getValue() {
+      return myBuffer.toString();
+    }
+
+    @Override
+    public String toString() {
+      return "CharStringFS{size=" + mySize.getValue() + ", value=" + getValue() + "}";
+    }
   }
 
-  public static class WChar extends Bin {
+  /**
+   * Size-prefixed wide character (2 bytes) string, UTF-16.
+   * <p>
+   * Size is {@linkplain Word} by default.
+   */
+  public static class WCharStringSP extends Bin {
+    private static final String EMPTY_STRING = "";
+    private final Value mySize;
     private String myValue;
 
-    public WChar(String name) {
+    public WCharStringSP() {
+      this(new Word());
+    }
+
+    public WCharStringSP(Value size) {
+      super("");
+      mySize = size;
+    }
+
+    public String getValue() {
+      return myValue;
+    }
+
+    public void setValue(String value) {
+      myValue = value;
+      mySize.setValue(value.length());
+    }
+
+    @Override
+    public long sizeInBytes() {
+      return mySize.sizeInBytes() + mySize.getValue() * 2;
+    }
+
+    @Override
+    public void read(DataInput stream) throws IOException {
+      mySize.read(stream);
+      long size = mySize.getValue();
+      if (size == 0) {
+        myValue = EMPTY_STRING;
+        return;
+      }
+      StringBuilder builder = new StringBuilder();
+      for (int i = 0; i < size; ++i) {
+        char c = BitsUtil.readChar(stream);
+        builder.append(c);
+      }
+      myValue = builder.toString();
+    }
+
+    @Override
+    public void write(DataOutput stream) throws IOException {
+      assert mySize.getValue() == myValue.length();
+      mySize.write(stream);
+      for (int i = 0; i < myValue.length(); i++) {
+        stream.writeShort(Short.toUnsignedInt(Short.reverseBytes((short)myValue.charAt(i))));
+      }
+    }
+
+    @Override
+    public void report(OutputStreamWriter writer) throws IOException {
+      _report(writer, myValue);
+    }
+
+    @Override
+    public String toString() {
+      return "WCharStringSP{" +
+             "size=" + mySize +
+             ", value=" + myValue +
+             '}';
+    }
+  }
+
+  /**
+   * Null-terminated wide character (2 bytes) string, UTF-16
+   */
+  public static class WCharStringNT extends Bin {
+    private String myValue;
+
+    public WCharStringNT(String name) {
       super(name);
     }
 
@@ -532,7 +616,7 @@ public abstract class Bin {
     @Override
     public void write(DataOutput stream) throws IOException {
       for (int i = 0; i < myValue.length(); i++) {
-        stream.writeShort(BitsUtil.revertBytesOfShort((short) myValue.charAt(i)));
+        stream.writeShort(Short.toUnsignedInt(Short.reverseBytes((short)myValue.charAt(i))));
       }
       stream.writeShort(0);
     }
@@ -549,34 +633,33 @@ public abstract class Bin {
     public void setValue(String value) {
       myValue = value;
     }
+
+    @Override
+    public String toString() {
+      return "WCharStringNT{value=" + myValue + '}';
+    }
   }
 
   public static class Bytes extends Bin {
     private byte[] myBytes;
-    private Value myStartOffset;
-    private Value mySize;
-    private int myBytesInRow = 16;
+    private final Value myStartOffset;
+    private final Value mySize;
+    private static final int ourBytesInRow = 16;
 
     public Bytes(String name, Bin.Value size) {
       super(name);
+      myStartOffset = null;
       mySize = size;
     }
 
     public Bytes(String name, long size) {
       super(name);
+      myStartOffset = null;
       mySize = new DWord("size").setValue(size);
     }
 
     public Bytes(String name, Bin.Value startOffset, Bin.Value size) {
       super(name);
-      reset(startOffset, size);
-    }
-
-    public void reset(int startOffset, int size) {
-      reset(new DWord("startOffset").setValue(startOffset), new DWord("size").setValue(size));
-    }
-
-    public void reset(Bin.Value startOffset, Bin.Value size) {
       myStartOffset = startOffset;
       mySize = size;
     }
@@ -597,49 +680,70 @@ public abstract class Bin {
       mySize.setValue(size);
     }
 
+    @Override
     public long sizeInBytes() {
       return mySize.getValue();
     }
 
+    @Override
     public void read(DataInput stream) throws IOException {
       if (myStartOffset != null) {
-        RandomAccessFile file = (RandomAccessFile) stream;
-        file.seek(myStartOffset.getValue());
+        long offset = myStartOffset.getValue();
+        long streamOffset = StreamUtil.getOffset(stream);
+        if (streamOffset != offset) {
+          if (offset > streamOffset) {
+            //noinspection UseOfSystemOutOrSystemErr
+            System.err.printf("WARN: non-continuous read: reading offset %#x, current stream offset %#x %n", offset, streamOffset);
+          } else {
+            //noinspection UseOfSystemOutOrSystemErr
+            System.err.printf("WARN: out of order read: reading offset %#x, current stream offset %#x %n", offset, streamOffset);
+          }
+          StreamUtil.seek(stream, offset);
+        }
       }
       myBytes = new byte[(int) mySize.getValue()];
       stream.readFully(myBytes);
     }
 
+    @Override
     public void write(DataOutput stream) throws IOException {
       stream.write(myBytes, 0, (int) sizeInBytes());
     }
 
-    private StringBuffer myBuffer = new StringBuffer();
-
+    @Override
     public void report(OutputStreamWriter writer) throws IOException {
       _report(writer, getName());
       _report(writer, "Number of bytes: " + mySize.getValue());
-      int rowCount = (myBytes.length / myBytesInRow);
-      if (myBytes.length % myBytesInRow != 0) {
+      int rowCount = (myBytes.length / ourBytesInRow);
+      if (myBytes.length % ourBytesInRow != 0) {
         rowCount++;
       }
       int byteCount = 0;
+      StringBuilder myBuffer = new StringBuilder();
       for (int i = 0; i < rowCount; i++) {
         myBuffer.setLength(0);
         myBuffer.append("\n");
-        for (int j = 0; j < myBytesInRow && byteCount < myBytes.length; j++) {
+        for (int j = 0; j < ourBytesInRow && byteCount < myBytes.length; j++) {
           byte aByte = myBytes[byteCount++];
           myBuffer.append(" ").append(BitsUtil.byteToHexString(aByte));
         }
         writer.write(myBuffer.toString());
       }
     }
+
+    @Override
+    public String toString() {
+      return "Bytes{" +
+             "StartOffset=" + myStartOffset +
+             ", Size=" + mySize +
+             '}';
+    }
   }
 
-  public static class ArrayOfBins<T extends Bin> extends Bin {
-    private Bin[] myValues;
-    private Bin.Value mySize;
-    private Class myClass;
+  public static class ArrayOfBins<T extends Bin> extends Bin implements Iterable<T> {
+    private ArrayList<T> myValues;
+    private final Bin.Value mySize;
+    private final Class<T> myClass;
     private Bin.Value myCountHolder = null;
 
     public ArrayOfBins(String name, Class<T> cl, Bin.Value size) {
@@ -653,18 +757,19 @@ public abstract class Bin {
       this(name, cl, new DWord("size").setValue(size));
     }
 
-    public void addBin( Bin bin ){
-      Bin[] newArray = new Bin[myValues.length+1];
-      System.arraycopy( myValues, 0, newArray, 0, myValues.length );
-      newArray[myValues.length] = bin;
-      myValues = newArray;
-      mySize.setValue( mySize.getValue() + 1 );
+    public void addBin(T bin) {
+      myValues.add(bin);
+      if (myCountHolder != null) {
+        myCountHolder.setValue(myValues.size());
+      }
     }
 
+    @Override
     public void copyFrom(Bin bin) {
-      ArrayOfBins value = (ArrayOfBins)bin;
-      for (int i = 0; i < myValues.length; i++) {
-        myValues[i].copyFrom( value.get(i) );
+      //noinspection unchecked
+      ArrayOfBins<T> value = (ArrayOfBins<T>)bin;
+      for (int i = 0; i < myValues.size(); i++) {
+        myValues.get(i).copyFrom(value.myValues.get(i));
       }
     }
 
@@ -673,24 +778,27 @@ public abstract class Bin {
     }
 
     private void init() {
-      myValues = (Bin[]) Array.newInstance(myClass, (int) mySize.getValue());
+      int size = (int)mySize.getValue();
+      myValues = new ArrayList<>(size);
 
-      for (int i = 0; i < myValues.length; i++) {
+      for (int i = 0; i < size; i++) {
         try {
-          Bin bin = (Bin) myClass.newInstance();
+          T bin = myClass.getDeclaredConstructor().newInstance();
           bin.setName("[" + i + "]");
-          myValues[i] = bin;
-        } catch (InstantiationException | IllegalAccessException e) {
+          myValues.add(bin);
+        }
+        catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
           throw new RuntimeException(e.getMessage());
         }
       }
     }
 
+    @Override
     public void resetOffsets(long newOffset) {
       super.resetOffsets(newOffset);
       long offset = getOffset();
       if (myCountHolder != null) {
-        myCountHolder.setValue(myValues.length);
+        myCountHolder.setValue(myValues.size());
       }
       for (Bin bin : myValues) {
         bin.resetOffsets(offset);
@@ -699,18 +807,14 @@ public abstract class Bin {
     }
 
     public int size() {
-      return myValues.length;
-    }
-
-    public Bin[] getArray() {
-      return myValues;
+      return myValues.size();
     }
 
     public T get(int index) {
-      //noinspection unchecked
-      return (T) myValues[index];
+      return myValues.get(index);
     }
 
+    @Override
     public long sizeInBytes() {
       int size = 0;
       for (Bin value : myValues) {
@@ -719,6 +823,7 @@ public abstract class Bin {
       return size;
     }
 
+    @Override
     public void read(DataInput stream) throws IOException {
       init();
       for (Bin value : myValues) {
@@ -726,17 +831,24 @@ public abstract class Bin {
       }
     }
 
+    @Override
     public void write(DataOutput stream) throws IOException {
       for (Bin value : myValues) {
         value.write(stream);
       }
     }
 
+    @Override
     public void report(OutputStreamWriter writer) throws IOException {
-      writer.write("\n" + "Array size: " + myValues.length);
+      writer.write("\n" + getName() + " array size: " + myValues.size());
       for (Bin value : myValues) {
         value.report(writer);
       }
+    }
+
+    @Override
+    public Iterator<T> iterator() {
+      return myValues.iterator();
     }
   }
 
